--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -25,27 +24,31 @@
                 android:layout_margin="8dp">
 
                 <EditText
-                    android:id="@+id/edtUsername"
+                    android:id="@+id/edtCurrentPass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="text"
+                    android:enabled="false"
                     android:hint="@string/edt_input_user_uname" />
 
             </android.support.design.widget.TextInputLayout>
 
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="5"
                 android:layout_margin="8dp">
 
                 <EditText
-                    android:id="@+id/edtPhone"
+                    android:id="@+id/edtNewPass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="textPhonetic"
-                    android:hint="@string/edt_input_user_phone" />
+                    android:inputType="textPassword"
+                    android:hint="@string/edt_input_user_password" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -55,12 +58,12 @@
                 android:layout_margin="8dp">
 
                 <EditText
-                    android:id="@+id/edtFullName"
+                    android:id="@+id/edtReNewPass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="textPersonName"
-                    android:hint="@string/edt_input_user_full_name" />
+                    android:inputType="textPassword"
+                    android:hint="@string/edt_input_user_re_password" />
 
             </android.support.design.widget.TextInputLayout>
 
