--- a/app/src/main/res/layout/content_statistical.xml
+++ b/app/src/main/res/layout/content_statistical.xml
@@ -7,29 +7,32 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.StatisticalActivity"
     tools:showIn="@layout/activity_statistical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tbLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/colorPrimary"
-        app:tabSelectedTextColor="@color/colorPrimaryDark">
-    </android.support.design.widget.TabLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="@+id/tbLayout"
-        tools:layout_editor_absoluteX="0dp"></android.support.v4.view.ViewPager>
-</LinearLayout>
+        android:orientation="vertical">
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tbLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/colorPrimary"
+            app:tabSelectedTextColor="@color/colorPrimaryDark">
+        </android.support.design.widget.TabLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="@+id/tbLayout"
+            tools:layout_editor_absoluteX="0dp">
+        </android.support.v4.view.ViewPager>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
