--- a/app/src/main/res/layout/item_invoice.xml
+++ b/app/src/main/res/layout/item_invoice.xml
@@ -21,7 +21,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/admin" />
+            app:srcCompat="@drawable/invoice_icon" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -32,7 +32,7 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tvName"
+                android:id="@+id/tvInvoiceId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
@@ -40,15 +40,13 @@
                 android:textAllCaps="true"/>
 
             <TextView
-                android:id="@+id/tvPhone"
+                android:id="@+id/tvInvoiceDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:textSize="15sp"/>
 
         </LinearLayout>
-
-
 
     </LinearLayout>
 
